Fixed scrollbars

--- a/src/app/desktop/desktop-startmenu/desktop-startmenu.component.scss
+++ b/src/app/desktop/desktop-startmenu/desktop-startmenu.component.scss
@@ -55,8 +55,7 @@
 
     #linkages {
       height: 100%;
-      overflow-y: scroll;
-      -ms-overflow-style: none;
+      overflow-y: auto;
 
       &:vertical,
       &::-webkit-scrollbar {
