--- a/src/app/desktop/windows/terminal/terminal.component.scss
+++ b/src/app/desktop/windows/terminal/terminal.component.scss
@@ -17,7 +17,7 @@
 }
 
 #terminal-window {
-  overflow-y: scroll;
+  overflow-y: auto;
 
 
   padding: 6px;
